# lustro

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: enhancement-spec.md
docs/brainstorms/: 2026-02-24-lustro-open-source-rewrite-brainstorm.md
docs/plans/: 2026-02-24-feat-lustro-open-source-rewrite-plan.md
src/lustro/: __init__.py  __main__.py  breaking.py  cli.py  config.py  digest.py  discover.py  fetcher.py  log.py  relevance.py  state.py
src/lustro/sources/: default.yaml
tests/: test_breaking.py  test_cli.py  test_cli_fetch.py  test_config.py  test_digest.py  test_discover.py  test_fetcher.py  test_log.py  test_relevance.py  test_sorting.py  test_state.py
